# rocket-designer

./: .gitignore  Cargo.toml  README.md  pyproject.toml
rocketdesign/: simulation.ipynb
rocketdesign/Models/: AeroModel.py  Atmoshphere.py  Planet.py  SimObject3dof.py  SimObjects.py  SimpleEngineModel.py  postprocess.py
rocketdesign/Simulation/: SimObjects.py  postprocess.py
rocketdesign/Sizing/: rocket_equation,py  rocket_equation.py
rocketdesign/Solvers/: RootFinders.py
rocketdesign/utils/: Quaternions.py  Rotations.py  plotting.py
src/: main.rs
